assets/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app.kubernetes.io/component: inference-gateway
    app.kubernetes.io/gateway: llm-d-operator-inference-gateway
    app.kubernetes.io/instance: llm-d-operator
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: llm-d
    app.kubernetes.io/version: "0.1"
    gateway.istio.io/managed: istio.io-gateway-controller
    gateway.networking.k8s.io/gateway-name: llm-d-operator-inference-gateway
    helm.sh/chart: llm-d-1.0.23
    istio.io/enable-inference-extproc: "true"
  name: llm-d-inference-gateway
  namespace: llm-d
spec:
  host: llm-d-inference-gateway-llm-d.apps.rhoai-cluster.qhxt.p1.openshiftapps.com
  port:
    targetPort: 80
  tls:
    termination: edge
  to:
    kind: Service
    name: llm-d-gateway-istio
    weight: 100
  wildcardPolicy: None
